# lectures

./: .clang-tidy
01-210902/: plan.md
01-210902/01-basic/: 01-bad.cpp  02-a-plus-b.cpp  03-uninitialized-vars.cpp  04-inc.cpp  05-auto.cpp  06-if.cpp  07-for.cpp  a-plus-b.cpp
02-210909/: plan.md
02-210909/01-trivial-types/: 00-bitwise.cpp  01-bool.cpp  02-floating.cpp  02b-floating-fixed.cpp  02c-floating-bad.cpp  03-char.cpp  04-literals.cpp  05-strings.cpp  06-stringstream.cpp
02-210909/02-vectors/: 01-vector.cpp  02-vector-wtf.cpp  03-vector-out-of-bounds  03-vector-out-of-bounds.cpp  04-vector.cpp
02-210909/03-containers/: 01-set.cpp  03-erase-good.cpp
04-210923/02-ctors/: 02-args.cpp  (+9 more)
05-210930/: extra.md
06-211006/: TODO.md
07-211013/: TODO.md
09-211110/: 00-warning.md  00b-special-operators.cpp  01-basic.cpp  02-compatible.cpp  03-casts.cpp  04-bad-c-cast.cpp  05-ctors.cpp  10-no-polymorph.cpp  11-naive-polymorph.cpp  12-virtual.cpp  13-ptrs-bad.cpp  13-pure-virtual.cpp  14-ptrs-bad.cpp  14-ptrs-good.cpp  15-ptrs-good.cpp  TODO.md
10-211117/: TODO.md
10-211117/05-shared-library/: CMakeLists.txt  abstract_plugin.h  main.cpp  plan.md  plugin_multiply.cpp  plugin_sum.cpp
11-211124/02-shared-library/02-ownership/: 01-bad.cpp  02-good-global.cpp  02-good.cpp  CMakeLists.txt  abstract_plugin.h  cmake_install.cmake  plugin_one.cpp
11-211124/02-shared-library/03-stdlib-mismatch/: 01-careful  01-careful.cpp  CMakeLists.txt  abstract_plugin.h  cmake_install.cmake  plugin_one.cpp
12-211201/: 00-reminder.md  TODO.md
13b-211215/: 02-overload-delete.cpp  03-overload-delete.cpp  04-linkage.cpp  05-static-deinitialization-order.cpp  06-typedef-using.cpp  07-eval-order.cpp  08-auto-no-const-ref.cpp  09-invalidation.cpp
13x-211218/: 01-23-friend-functions.cpp  02-23-self-modify.cpp  03-rq-gets.cpp  04-17-not-needed-const.cpp  05-13-colon-colon-std.cpp
16-220124/: 00-errata.txt  TODO.md
17-220131/: todo.md
19-220214/: 00-old.md  02-threads-general.md
20-220221/: TODO.md
22-220314/: 01-class-templates.md
23-220321/: 00-missing.md
25-220418/: TODO.md
27-220516/: TODO.md
28-220523/: TODO.md
29-220530/: 00-old.md  TODO.md
next/: 02-ambiguous-compare.cpp  10-macros.c  extra.md  fun-value-semantics.cpp  future.md  new.cpp  x3-proxy-object.cpp  x4-generic-stl-functor.cpp  xx-move-faster-copy.cpp
questions-a/: README.md
questions-b/: README.md
(+508 files in other folders)
